--- a/common/options.html
+++ b/common/options.html
@@ -50,7 +50,7 @@
         </div>
 
         <script src="options_files/jquery-1.9.1.min.js"></script>
-        <script src="../options.js"></script>
+        <script src="../forward_extension_messages.js"></script>
         <script src="options_files/main.js"></script>
     </body>
 </html>
