Fix a bug in the extensions, there was a hardcoded URL

--- a/common/options.html
+++ b/common/options.html
@@ -22,11 +22,9 @@
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
 
-                <h2>Thank you for helping us!</h2>
+                <h2>Thank you for helping us with your fingerprints!</h2>
 
-                <p>You have already sent us <b><span id="fingerprintsCount">-</span> fingerprints since <span id="initialCountDate">-</span></b>, but don't worry, we will only use them for analysis and won't share them with anyone.</p>
-
-                <p>You can see here how your current one looks!</p>
+                <p>Here you can see how your current one looks like</p>
 
                 <div id="fploading">
                     <img src="options_files/loading.gif">
@@ -48,7 +46,7 @@
 
                 </div>
 
-                <div id="fingerprint-stats">
+                <div id="fingerprint-stats-error">
                     An error ocurred, please try again later.
                 </div>
             </section>
