Add the option to the user to test the fingerprinter to see if it works.

--- a/common/options.html
+++ b/common/options.html
@@ -24,6 +24,18 @@
 
                 <h2>Thank you for helping us with your fingerprints!</h2>
 
+                <div id="fp-test">
+                    <p>Test the extension: <a href="#">Fingerprint me now</a></p>
+                    <ul id="fp-test-progress">
+                        <li id="fp-js-test-loading" class="loading"><img src="options_files/loading_small.gif"> sending JavaScript fingerprint</li>
+                        <li id="fp-js-test-ok" class="loaded"><span>&#10004;</span> JavaScript fingerprint sent</li>
+                        <li id="fp-js-test-error" class="loaded"><span>&#x2718;</span> JavaScript fingerprint couldn't be sent</li>
+                        <li id="fp-flash-test-loading" class="loading"><img src="options_files/loading_small.gif"> sending Flash fingerprint</li>
+                        <li id="fp-flash-test-ok" class="loaded"><span>&#10004;</span> Flash fingerprint sent</li>
+                        <li id="fp-flash-test-error" class="loaded"><span>&#x2718;</span> Flash fingerprint couldn't be sent</li>
+                    </ul>
+                </div>
+
                 <p>Here you can see how your current one looks like</p>
 
                 <div id="fploading">
