Add a server-provided global stats message to the options page.

--- a/common/options.html
+++ b/common/options.html
@@ -36,6 +36,8 @@
                     </ul>
                 </div>
 
+                <p id="global-stats-msg"></p>
+
                 <p>Here you can see how your current one looks like</p>
 
                 <div id="fploading">
